px4_ws/logs/frontend/build.make.010.log.stderr
/home/odroid/MAV-Project/px4_ws/src/frontend/src/ObjDetection.cpp: In member function 'void ObjDetection::objectDetect()':
/home/odroid/MAV-Project/px4_ws/src/frontend/src/ObjDetection.cpp:51:2: error: 'else' without a previous 'if'
  else if (!dem->match(frame->getKeypoints(), frame->getDescriptors(), *tempKeyPoints,*tempDescriptors,backward_matches))
  ^
/home/odroid/MAV-Project/px4_ws/src/frontend/src/ObjDetection.cpp:63:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for( int i = 0; i < backward_matches.size(); i++ ) // symmetry test
                                            ^
/home/odroid/MAV-Project/px4_ws/src/frontend/src/ObjDetection.cpp:66:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int j = 0; j < forward_matches.size();j++)
                                            ^
make[2]: *** [CMakeFiles/SLAM.dir/src/ObjDetection.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
